General performance improvements (#162)